# credscope

./: .gitignore  README.md  pyproject.toml
src/credscope/: __init__.py  analyzer.py  cli.py  parser.py  session.py  session_builder.py
tests/: test_parser.py  test_session_builder.py
