[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credscope"
version = "0.1.0"
description = "Identify credential exposure risk from Windows EVTX Security logs"
requires-python = ">=3.10"
dependencies = [
    "python-evtx>=0.7.4",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
credscope = "credscope.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
